// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPackages base frontend + react 1`] = `
Object {
  "dependencies": Array [
    "core-js@3",
    "react-dom@latest",
    "react@latest",
    "regenerator-runtime@latest",
  ],
  "devDependencies": Array [
    "@babel/core@7",
    "@babel/preset-env@7",
    "@babel/preset-react@latest",
    "@lionbyte/eslint-config@latest",
    "@types/jest@26",
    "@types/node@latest",
    "@types/react-dom@latest",
    "@types/react@latest",
    "@types/webpack-bundle-analyzer@3",
    "@types/webpack-dev-server@3",
    "@types/webpack-merge@4",
    "@types/webpack@4",
    "autoprefixer@9",
    "babel-jest@26",
    "babel-loader@latest",
    "clean-webpack-plugin@3",
    "css-loader@3",
    "cssnano@4",
    "eslint@7",
    "file-loader@6",
    "html-webpack-plugin@4",
    "jest-runner-eslint@0.10",
    "jest@26",
    "less-loader@6",
    "less@3",
    "mini-css-extract-plugin@latest",
    "postcss-loader@3",
    "prettier@2",
    "style-loader@1",
    "typescript@latest",
    "webpack-bundle-analyzer@3",
    "webpack-cli@3",
    "webpack-dev-server@3",
    "webpack-merge@4",
    "webpack@4",
  ],
}
`;

exports[`getPackages base frontend 1`] = `
Object {
  "dependencies": Array [
    "core-js@3",
    "regenerator-runtime@latest",
  ],
  "devDependencies": Array [
    "@babel/core@7",
    "@babel/preset-env@7",
    "@lionbyte/eslint-config@latest",
    "@types/jest@26",
    "@types/node@latest",
    "@types/webpack-bundle-analyzer@3",
    "@types/webpack-dev-server@3",
    "@types/webpack-merge@4",
    "@types/webpack@4",
    "autoprefixer@9",
    "babel-jest@26",
    "babel-loader@latest",
    "clean-webpack-plugin@3",
    "css-loader@3",
    "cssnano@4",
    "eslint@7",
    "file-loader@6",
    "html-webpack-plugin@4",
    "jest-runner-eslint@0.10",
    "jest@26",
    "less-loader@6",
    "less@3",
    "mini-css-extract-plugin@latest",
    "postcss-loader@3",
    "prettier@2",
    "style-loader@1",
    "typescript@latest",
    "webpack-bundle-analyzer@3",
    "webpack-cli@3",
    "webpack-dev-server@3",
    "webpack-merge@4",
    "webpack@4",
  ],
}
`;

exports[`getPackages base node + git hooks 1`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [
    "@lionbyte/eslint-config@latest",
    "@types/jest@26",
    "@types/node@latest",
    "eslint@7",
    "husky@4",
    "jest-runner-eslint@0.10",
    "jest@26",
    "lint-staged@latest",
    "prettier@2",
    "typescript@latest",
  ],
}
`;

exports[`getPackages base node 1`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [
    "@lionbyte/eslint-config@latest",
    "@types/jest@26",
    "@types/node@latest",
    "eslint@7",
    "jest-runner-eslint@0.10",
    "jest@26",
    "prettier@2",
    "typescript@latest",
  ],
}
`;
